--- a/index.css
+++ b/index.css
@@ -34,8 +34,9 @@ ul li{
 .eattogether{
     display: flex;
     justify-content: space-between;
-    margin: 40px;
-    padding: 20px;
+    margin: 10px;
+    padding: 120px;
+    text-align: center;
 }
 .eattogether >.eattext >h2{
     color: #E8AF51;
@@ -45,6 +46,9 @@ ul li{
 }
 .exploremenu{
     background-color: #C9ECB5;
+    display: flex;
+    flex-direction: row;
+    max-width: 1400px;
 }
 .exploremenu >img{
     height: 200px;
@@ -54,17 +58,15 @@ ul li{
 }
 .heading >p{
     width: 600px;
-    height: 
 }
 .heading{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.exploremenu{
-    display: flex;
-    flex-direction: row;
-    max-width: 1400px;
+.exploremenu >.burgermenu{
+    height: 300px;
+    width: 300px;
 }
 #ordernow{
     text-align: right;
@@ -86,4 +88,7 @@ ul li{
 }
 .eclipse{
     margin-top: 400px;
+}
+.eattext{
+    width: 800px;
 }
