--- a/index.css
+++ b/index.css
@@ -132,7 +132,7 @@ h3{
     background-color: #6BB946;
     border: none;
 }
-.footer{
+.footer >footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -169,4 +169,19 @@ h3{
 }
 .form{
     text-align: center;
+}
+.burgermenu >p{
+    position: relative;
+    float: right;
+    font-size: 14px;
+}
+#button{
+    width: 50px;
+    padding: 5px;
+    text-align: center;
+    border-radius: 25px;
+    background-color: #6BB946;
+    border: none;
+    margin-top: 50px;
+    margin-right: 20px;
 }
